# med-service

./: .gitignore  README.md
back/: docker-compose-local.yaml  docker-compose.yaml
back/src/appoint/: alembic.ini  config.py  main.py  pyproject.toml
back/src/appoint/appoint/: model.py  repository.py  router.py  schemas.py
back/src/appoint/migrations/: env.py
back/src/appoint/migrations/versions/: 63ff0524fc52_appoint.py
back/src/auth/: alembic.ini  config.py  main.py
back/src/auth/auth/: model.py  schemas.py  service.py
back/src/auth/fixtures/: init_user.py
back/src/auth/migrations/versions/: a80910f4fe5e_user_role.py
back/src/card/: Dockerfile  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml
back/src/card/card/: model.py  repository.py  router.py  schemas.py  urls.py
back/src/card/migrations/: env.py
back/src/card/migrations/versions/: ee819d1da9c4_card.py
back/src/gateway/: Dockerfile  main.py  pyproject.toml
back/src/gateway/auth/: protection.py  schemas.py  service.py  urls.py
client/react/src/: App.tsx
client/react/src/components/: DoctorHome.tsx  LoginForm.tsx  PacientHome.tsx  RegistrationForm.tsx
client/react/src/http/: index.ts
client/react/src/models/response/: AuthResponce.ts
client/react/src/services/: AuthService.ts  CardService.ts
client/react/src/store/: store.ts
python/src/auth/: Dockerfile  Makefile  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml
python/src/auth/auth/: router.py  security.py
python/src/auth/migrations/versions/: 53d0fe661bc1_user.py
